samples/_failures_safe/1761364090_1fa2f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41d6ad57.c: In function ‘main’:
./samples/SAFE/__tmp_41d6ad57.c:180:5: error: expected ‘,’ or ‘;’ at end of input
  180 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_41d6ad57.c:180:5: error: expected declaration or statement at end of input
